--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MusicContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MusicContext-20160303131035; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MusicContext-20160303131035.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="MusicContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MusicContext-20160303131035; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MusicContext-20160303131035.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
